Fix magnet link text overflow on small screens

--- a/public/style/bittorrent.css
+++ b/public/style/bittorrent.css
@@ -4,6 +4,7 @@ main {
 
 #inner a {
   color: var(--accent);
+  word-break: break-all;
 }
 
 #inner span {
